--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,7 @@ python:
   - "3.6"
   - "3.7"
   - "3.8"
+install:
+  - pip install -r dev-requirements.txt
 script:
   - python -m unittest discover
