--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ python:
   - "3.8"
 install:
   - pip install -r dev-requirements.txt
+  - pip install coveralls
 script:
   - python -m unittest discover
 after_success:
