--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ install:
   - pip install -r dev-requirements.txt
   - pip install coveralls
 script:
-  - python -m unittest discover
+  - coverage run -m unittest discover
 after_success:
   - coveralls
